# E2D

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  Application_8hpp.html  Application_8hpp_source.html  CMakeLists.txt  CMakePresets.json  CNAME  Color_8hpp.html  Color_8hpp_source.html  Config_8hpp.html  Config_8hpp_source.html  CoreSystem_8hpp.html  CoreSystem_8hpp_source.html  Core_2Export_8hpp.html  Core_2Export_8hpp_source.html  Core_8hpp.html  Core_8hpp_source.html  Engine_2Export_8hpp.html  Engine_2Export_8hpp_source.html  Engine_8hpp.html  Engine_8hpp_source.html  Event_8hpp.html  Event_8hpp_source.html  FontImpl_8hpp.html  FontImpl_8hpp_source.html  FontSystem_8hpp.html  FontSystem_8hpp_source.html  Font_8hpp.html  Font_8hpp_source.html  Format_8hpp.html  Format_8hpp_source.html  Formatter_8hpp.html  Formatter_8hpp_source.html  GraphicsSystem_8hpp.html  GraphicsSystem_8hpp_source.html  Keyboard_8hpp.html  Keyboard_8hpp_source.html  LICENCE  (+227 more)
.github/workflows/: .editorconfig  ci.yml  docs.yml  main.yml
cmake/: CompilerWarnings.cmake  Config.cmake  E2DConfig.cmake.in  E2DConfigDependencies.cmake.in  Macros.cmake
cmake/modules/: FindSDL2.cmake  FindSDL2_IMAGE.cmake  FindSDL2_TTF.cmake
docs/: CMakeLists.txt  custom.css  doxyfile.in
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt
examples/basic/include/Basic/: BasicApplication.hpp
examples/basic/src/Basic/: BasicApplication.cpp  main.cpp
examples/classic-rpg/: CMakeLists.txt  ClassicRPG.cpp  ClassicRPG.hpp  GameScene.cpp  GameScene.hpp  Player.cpp  Player.hpp  main.cpp
examples/hello-world/: CMakeLists.txt  main.cpp
extlibs/libs-macos/Frameworks/SDL2.framework/Headers/: SDL_config.h
extlibs/libs-macos/Frameworks/SDL2.framework/Versions/Current/Headers/: SDL_config.h
include/E2D/: Config.hpp  Core.hpp  Engine.hpp  System.hpp
include/E2D/Core/: Application.hpp  Color.hpp  Color.inl  Export.hpp  Format.hpp  Formatter.hpp  Formatter.inl  Logger.hpp  Logger.inl  NonCopyable.hpp  Rect.hpp  Rect.inl  System.hpp  Timer.hpp  Vector2.hpp  Vector2.inl  Window.hpp
include/E2D/Engine/: Application.hpp  CoreSystem.hpp  Entity.hpp  Event.hpp  Event.inl  Export.hpp  Font.hpp  FontSystem.hpp  GraphicsSystem.hpp  Keyboard.hpp  Object.hpp  ObjectRegistry.hpp  ObjectRegistry.inl  Renderable.hpp  Renderer.hpp  Resource.hpp  ResourceRegistry.hpp  ResourceRegistry.inl  Scene.hpp  Scene.inl  SceneManager.hpp  SceneManager.inl  Sprite.hpp  System.hpp  SystemManager.hpp  SystemManager.inl  Text.hpp  TextRenderingSystem.hpp  Texture.hpp  Transformable.hpp  Window.hpp
include/E2D/System/: Export.hpp  Vector2.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+91 more)
src/E2D/: CMakeLists.txt
src/E2D/Core/: Application.cpp  CMakeLists.txt  Color.cpp  EventHandler.cpp  EventHandler.hpp  Formatter.cpp  Logger.cpp  SDLInitializer.cpp  SDLInitializer.hpp  System.cpp  Timer.cpp  Window.cpp  dummy.cpp
src/E2D/Engine/: Application.cpp  CMakeLists.txt  CoreSystem.cpp  Entity.cpp  Event.cpp  Font.cpp  FontImpl.cpp  FontImpl.hpp  FontSystem.cpp  GraphicsSystem.cpp  Object.cpp  ObjectRegistry.cpp  RandomUtils.cpp  RandomUtils.hpp  RenderQueue.cpp  RenderQueue.hpp  Renderable.cpp  Renderer.cpp  Renderer.hpp  RendererContext.cpp  RendererContext.hpp  RendererImpl.cpp  RendererImpl.hpp  Resource.cpp  ResourceRegistry.cpp  SDLKeyboardUtils.cpp  SDLKeyboardUtils.hpp  SDLRenderUtils.cpp  SDLRenderUtils.hpp  Scene.cpp  SceneManager.cpp  Sprite.cpp  System.cpp  SystemManager.cpp  Text.cpp  TextImpl.cpp  TextImpl.hpp  TextRenderingSystem.cpp  Texture.cpp  TextureImpl.cpp  (+6 more)
src/E2D/System/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
test/Core/: Color.test.cpp  Format.test.cpp  Formatter.test.cpp  Rect.test.cpp  Timer.test.cpp  Vector2.test.cpp
test/E2D/Core/: ApplicationImpl.hpp  ApplicationTest.cpp  CMakeLists.txt
test/Engine/: Application.test.cpp  Event.test.cpp  ObjectRegistry.test.cpp  Renderer.test.cpp  RendererContext.test.cpp  RendererQueue.test.cpp  ResourceRegistry.test.cpp  SDLKeyboardUtils.test.cpp  SDLRenderUtils.test.cpp  Scene.test.cpp  SceneManager.test.cpp  Texture.test.cpp  Window.test.cpp  helloworld.bin.hpp  opensans.bin.hpp
test/Engine/derived/: TestScene.hpp
test/install/: CMakeLists.txt  Install.cpp
