include(${PROJECT_SOURCE_DIR}/cmake/Macros.cmake)

if(E2D_OS_WINDOWS)
    list(APPEND CMAKE_INCLUDE_PATH "${PROJECT_SOURCE_DIR}/extlibs/headers")
    if(E2D_COMPILER_GCC OR (E2D_COMPILER_CLANG AND MINGW))
        if(ARCH_32BITS)
            list(APPEND CMAKE_LIBRARY_PATH "${PROJECT_SOURCE_DIR}/extlibs/libs-mingw/x86")
            list(APPEND CMAKE_LIBRARY_PATH "${PROJECT_SOURCE_DIR}/extlibs/bin/x86")
        elseif(ARCH_64BITS)
            list(APPEND CMAKE_LIBRARY_PATH "${PROJECT_SOURCE_DIR}/extlibs/libs-mingw/x64")
            list(APPEND CMAKE_LIBRARY_PATH "${PROJECT_SOURCE_DIR}/extlibs/bin/x64")
        endif()
    elseif(E2D_COMPILER_MSVC OR (E2D_COMPILER_CLANG AND NOT MINGW))
        if(ARCH_32BITS)
            list(APPEND CMAKE_LIBRARY_PATH "${PROJECT_SOURCE_DIR}/extlibs/libs-msvc/x86")
        elseif(ARCH_64BITS)
            list(APPEND CMAKE_LIBRARY_PATH "${PROJECT_SOURCE_DIR}/extlibs/libs-msvc/x64")
        endif()
    endif()
elseif(E2D_OS_MACOS)
    list(APPEND CMAKE_INCLUDE_PATH "${PROJECT_SOURCE_DIR}/extlibs/headers")
    list(APPEND CMAKE_LIBRARY_PATH "${PROJECT_SOURCE_DIR}/extlibs/libs-macos/lib")
    list(APPEND CMAKE_LIBRARY_PATH "${PROJECT_SOURCE_DIR}/extlibs/libs-macos/Frameworks")
endif()

set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/modules/")
set(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")

e2d_find_package(SDL2 INCLUDE "SDL2_INCLUDE_DIR" LINK "SDL2_LIBRARY")
e2d_find_package(SDL2_IMAGE INCLUDE "SDL2_IMAGE_INCLUDE_DIR" LINK "SDL2_IMAGE_LIBRARY")
e2d_find_package(SDL2_TTF INCLUDE "SDL2_TTF_INCLUDE_DIR" LINK "SDL2_TTF_LIBRARY")

add_subdirectory(Core)

if(E2D_BUILD_ENGINE)
    add_subdirectory(Engine)
endif()
